# uav

./: README.md  README_cn.md
captured_photos/: CMakeLists.txt  package.xml
captured_photos/launch/: shangchuan_camera_position.launch.py  shangchuan_photo_position.launch.py
captured_photos/src/: shangchuan_camera_position.py  shangchuan_photo_position.py
object_position/: CMakeLists.txt  package.xml
object_position/include/: object_position.h
object_position/launch/: object_position.launch
object_position/src/: object_position.cpp
qgc_mission/: CMakeLists.txt  package.xml
qgc_mission/launch/: qgc.launch.py
qgc_mission/src/: qgc_mission_ros2.cpp
