<?xml version="1.0"?>
<package format="3">
  <name>captured_photos</name>
  <version>0.0.0</version>
  <description>The captured_photos package</description>

  <maintainer email="cwkj@todo.todo">cwkj</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ai_msgs</depend>
  <depend>oss2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
